@@ -39,6 +39,7 @@ Version 7.44 - not yet released
   - Add driver for Condor 3
   - Add driver for LX Navigation Eos / Era variometers
   - Flarm: parse flarm error messages (PFLAE) and display them
+  - LXNAV: parse acceleration/g-load from PLXVF sentence
   - LXNAV: Overload formula, use reference mass instead of dry mass
   - OpenVario: Overload formula, use reference mass instead of dry mass
   - Vaulter: use fraction instead of overload for ballast
